--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>connect-four</finalName>
+        <finalName>blackjack</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
